<resources>
    <string name="app_name">MyDictionary</string>

    <!-- DrawInfoActivity -->
    <string name="show_word">"単語"</string>
    <string name="show_read">"読み方"</string>
    <string name="show_field">"分野"</string>
    <string name="show_mean">"意味"</string>

    <!-- EditActivity -->
    <string name="blank_word">"単語を入力"</string>
    <string name="blank_read">"単語の読み方を入力"</string>
    <string name="blank_mean">"単語の意味を入力"</string>

    <!-- TitleBar -->
    <string name="bar_add">"ADD"</string>
    <string name="bar_edit">"EDIT"</string>
    <string name="bar_update">"UPDATE"</string>
    <string name="bar_finish">"FINISH"</string>

    <!-- DrawerMenu -->
    <string name="drawer_title">"Select Function"</string>
    <string name="menu_title_dictionary">"Dictionary"</string>
    <string name="menu_title_research">"Research"</string>
    <string name="menu_select_top">"TOP"</string>
    <string name="menu_select_add">"ADD"</string>

    <!-- TestActivity -->
    <string name="test1">"(テスト1)分類名を取得"</string>
    <string name="test2">"(テスト2)分類名を送信し、単語の名前と読み方を取得"</string>
    <string name="test4">"(テスト4)単語の名前と読み方を送信し、単語の情報を取得"</string>
    <string name="test6">"(テスト6)追加"</string>
    <string name="test7">"(テスト7)削除"</string>
    <string name="call_activity">"Activity呼び出し"</string>
</resources>
