<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@mipmap/ic_launcher"
            android:title="Import" />
    </group>-->
    <item android:title="@string/menu_title_dictionary">
        <menu>
            <item
                android:id="@+id/top_dictionary"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/menu_select_top" />
            <item
                android:id="@+id/add_dictionary"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/menu_select_add" />
            <!-- Sort
            <item
                android:id="@+id/nav_send"
                android:icon="@mipmap/ic_launcher"
                android:title="Send" />
                -->
        </menu>
    </item>

    <item android:title="@string/menu_title_research">
        <menu>
            <item
                android:id="@+id/top_research"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/menu_select_top"/>
            <item
                android:id="@+id/add_research"
                android:icon="@mipmap/ic_launcher"
                android:title="@string/menu_select_add" />
        </menu>
    </item>
</menu>