<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yukinaito.mydictionary.ui.activity.EditWordInfoActivity">

    <include
        layout="@layout/layout_item_name_on_word"
        android:id="@+id/item_name_on_word"/>

    <LinearLayout
        style="@style/linear_layout_right_word_information"
        android:layout_toEndOf="@+id/item_name_on_word">

        <EditText
            style="@style/edit_view_one_line"
            android:id="@+id/input_name"
            android:hint="@string/blank_word"/>

        <EditText
            style="@style/edit_view_one_line"
            android:id="@+id/input_kana"
            android:hint="@string/blank_read"/>

        <com.example.yukinaito.mydictionary.ui.view.CustomSpinner
            android:id="@+id/input_filed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/view_underline_white"/>

        <ScrollView style="@style/scroll_view_mean">

            <EditText
                style="@style/text_multi_line"
                android:id="@+id/input_mean"
                android:hint="@string/blank_mean"
                android:enabled="false"
                android:padding="10dp"
                android:background="@drawable/view_underline_white"/>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>