<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_draw_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yukinaito.mydictionary.ui.activity.DrawInfoActivity">

    <LinearLayout
        android:id="@+id/item_field_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_word"
            android:textSize="22sp"
            android:padding="10dp"
            android:textColor="#ffffff"
            android:background="@drawable/underline"
            android:gravity="center"/>

        <TextView
            android:id="@+id/item_kana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_read"
            android:textSize="22sp"
            android:padding="10dp"
            android:textColor="#ffffff"
            android:background="@drawable/underline"
            android:gravity="center"/>

        <TextView
            android:id="@+id/item_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_field"
            android:textSize="22sp"
            android:padding="10dp"
            android:textColor="#ffffff"
            android:background="@drawable/underline"
            android:gravity="center"/>

        <TextView
            android:id="@+id/item_mean"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/show_mean"
            android:textSize="22sp"
            android:padding="10dp"
            android:textColor="#ffffff"
            android:background="@color/heading"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_field_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/item_field_layout">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/underline_white">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/draw_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:padding="10dp"
                    android:maxLines="1"/>
            </LinearLayout>
        </HorizontalScrollView>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:background="@drawable/underline_white">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/draw_kana"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:padding="10dp"
                    android:maxLines="1"/>
            </LinearLayout>
        </HorizontalScrollView>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/underline_white">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/draw_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:padding="10dp"
                    android:maxLines="1"/>
            </LinearLayout>
        </HorizontalScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/draw_mean"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="22sp"
                    android:padding="10dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</RelativeLayout>
